--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,3 +1,3 @@
 <h4>User Detail</h4>
-<p>User Details here:</p>
-<button class="btn btn-primary" >Increase</button>
+<p>User Details here: {{ number }}</p>
+<button (click)="onIncrease()" class="btn btn-primary" >Increase</button>
