added ng directives  to change classes and styles

--- a/src/app/cart/cart-component.component.html
+++ b/src/app/cart/cart-component.component.html
@@ -1,3 +1,16 @@
-<p> cart-component Here </p>
-<input type="text" [(ngModel)]= "newItem">
-<button (click)="addItem()"> Add item</button>
+<hr>
+<div style="text-align: center">
+  <h3> Cart </h3>
+  <div>
+    <input type="text" [(ngModel)]= "newItem">
+
+    <button class="btn" (click)="addItem()" [ngClass]="{'btn-danger': newItem !== '', 'btn-primary': newItem === ''}"> Add item</button>
+  </div>
+
+  <hr>
+
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let item of items; let idx = index"
+    [ngStyle]="{backgroundColor: idx % 2 === 0 ? 'orange' : 'grey'}">{{ item }}</li>
+  </ul>
+</div>
